--- a/package.json
+++ b/package.json
@@ -3,23 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@stripe/react-stripe-js": "^1.13.0",
+    "@stripe/stripe-js": "^1.41.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "firebase": "^9.10.0",
     "notiflix": "^3.2.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-star-rate": "^0.2.0",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.0.8",
-    "web-vitals": "^2.1.4"
+    "stripe": "^10.13.0",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:frontend": "react-scripts start",
+    "start:backend": "nodemon server.js",
+    "start": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
