--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-paystack": "^4.0.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
